# rosbag-tools

./: .gitignore  CHANGELOG.rst  CITATION.cff  README.md  RELEASE.md  pyproject.toml  requirements.txt  setup.cfg
requirements/: requirements-build.txt  requirements-common.txt  requirements-dev.txt
rosbag_tools/: __init__.py  __main__.py
rosbag_tools/topic-compare/: __init__.py  __main__.py  main.py
src/rosbag_tools/: __init__.py  __main__.py  base.py  exceptions.py  utils.py
src/rosbag_tools/clip/: README.md  __init__.py  __main__.py  clipper.py  main.py
src/rosbag_tools/compute_duration/: README.md  __init__.py  __main__.py  duration_calculator.py  main.py
src/rosbag_tools/export_odom/: README.md  __init__.py  __main__.py  main.py  odometry_exporter.py
src/rosbag_tools/split/: README.md  __init__.py  __main__.py  main.py  splitter.py
src/rosbag_tools/topic_compare/: README.md  __init__.py  __main__.py  main.py  topic_comparator.py
src/rosbag_tools/topic_remove/: README.md  __init__.py  __main__.py  main.py  topic_remover.py
